--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <!--
+
+<head>
+  <meta charset="utf-8">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#000000">
+  <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <!--
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" />
+
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -21,14 +22,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
-    <!--
+  <title>React App</title>
+</head>
+
+<body>
+  <noscript>
+    You need to enable JavaScript to run this app.
+  </noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -38,5 +40,104 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
+<script src="https://www.paypalobjects.com/api/checkout.js"></script>
+<div id="paypal-button-container"></div>
+<script>
+
+  // Render the PayPal button
+
+  paypal.Button.render({
+
+    // Set your environment
+
+    env: 'sandbox', // sandbox | production
+
+    // Specify the style of the button
+
+    style: {
+      label: 'paypal',
+      size: 'medium',    // small | medium | large | responsive
+      shape: 'rect',     // pill | rect
+      color: 'blue',     // gold | blue | silver | black
+      tagline: false
+    },
+
+    // PayPal Client IDs - replace with your own
+    // Create a PayPal app: https://developer.paypal.com/developer/applications/create
+
+    client: {
+      sandbox: 'Ac69fC1jh87EiTZ7i0cjWWufbpuinenleHagWCqMmeVfDBtzT1naUJr_zPMD2btfEvfZ0N1iHA3yJ9xd',
+      production: '<insert production client id>'
+    },
+
+    // Set up a payment
+    payment: function (data, actions) {
+      return actions.payment.create({
+        transactions: [{
+          amount: {
+            total: '30.11',
+            currency: 'USD',
+            details: {
+              subtotal: '30.00',
+              tax: '0.07',
+              shipping: '0.03',
+              handling_fee: '1.00',
+              shipping_discount: '-1.00',
+              insurance: '0.01'
+            }
+          },
+          description: 'The payment transaction description.',
+          custom: '90048630024435',
+          //invoice_number: '12345', Insert a unique invoice number
+          payment_options: {
+            allowed_payment_method: 'INSTANT_FUNDING_SOURCE'
+          },
+          soft_descriptor: 'ECHI5786786',
+          item_list: {
+            items: [
+              {
+                name: 'hat',
+                description: 'Brown hat.',
+                quantity: '5',
+                price: '3',
+                tax: '0.01',
+                sku: '1',
+                currency: 'USD'
+              },
+              {
+                name: 'handbag',
+                description: 'Black handbag.',
+                quantity: '1',
+                price: '15',
+                tax: '0.02',
+                sku: 'product34',
+                currency: 'USD'
+              }],
+            shipping_address: {
+              recipient_name: 'Brian Robinson',
+              line1: '4th Floor',
+              line2: 'Unit #34',
+              city: 'San Jose',
+              country_code: 'US',
+              postal_code: '95131',
+              phone: '011862212345678',
+              state: 'CA'
+            }
+          }
+        }],
+        note_to_payer: 'Contact us for any questions on your order.'
+      });
+    },
+    onAuthorize: function (data, actions) {
+      return actions.payment.execute().then(function () {
+        window.alert('Payment Complete!');
+      });
+    }
+
+  }, '#paypal-button-container');
+
+</script>
+
 </html>
