--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,24 @@
     -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" />
 
+
+  <!-- TODO : Clean up Css -->
+  <link rel="stylesheet" type="text/css" href="styles/bootstrap-4.1.2/bootstrap.min.css">
+  <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/owl.carousel.css">
+  <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
+  <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/animate.css">
+  <link rel="stylesheet" type="text/css" href="styles/cart_responsive.css">
+  <link rel="stylesheet" type="text/css" href="styles/cart.css">
+  <link rel="stylesheet" type="text/css" href="styles/category_responsive.css">
+  <link rel="stylesheet" type="text/css" href="styles/category.css">
+  <link rel="stylesheet" type="text/css" href="styles/checkout_responsive.css">
+  <link rel="stylesheet" type="text/css" href="styles/checkout.css">
+  <link rel="stylesheet" type="text/css" href="styles/main_styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/product_responsive.css">
+  <link rel="stylesheet" type="text/css" href="styles/product.css">
+  <link rel="stylesheet" type="text/css" href="styles/responsive.css">
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
